<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.edu.ifspsaocarlos.sdm.listaprodutossdm.view.NovoProdutoActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nome"/>

    <EditText
        android:id="@+id/etNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/descricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etDescricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btSelecionarImagem"
        android:text="@string/selecionar_imagem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/cancelar"
            android:id="@+id/bt_cancelar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"/>

        <Button
            android:text="@string/salvar"
            android:id="@+id/bt_salvar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_produto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
