<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.edu.ifspsaocarlos.sdm.listaprodutossdm.view.LoginActivity"
    android:orientation="vertical">

        <TextView
            android:text="@string/nome_de_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/nome_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"/>

        <TextView
            android:text="@string/senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

        <CheckBox
            android:id="@+id/primeiro_acesso_checkbox"
            android:text="@string/primeiro_acesso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/entrar_button"
            android:text="@string/entrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

</LinearLayout>
