<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.edu.ifspsaocarlos.sdm.listaprodutossdm.view.UsuarioActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/cadastro_usuario_nome_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome_de_usuario"/>

    <EditText
        android:id="@+id/cadastro_usuario_senha_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/senha"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/cadastro_usuario_salvar_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salvar"/>

</LinearLayout>
